Edits Van Loon citation
s/b van, not Van

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1636,8 +1636,8 @@ entries:
     full: "van der Donk, Herbert, Hans de Herder, and André van Lier. 1996. “Restauratie Panorama Mesdag.” In *Magisch Panorama. Panorama Mesdag, een belevenis in ruimte en tijd*, edited by Yvonne van Eekelen, Mattie Boom, Jan E. Schierbeek, and Gerrit Willems, 151–63. Zwolle: Waanders."
   - id: "van Eikema Hommes and Froment 2011"
     full: "van Eikema Hommes, Margriet, and Emilie Froment. 2011. “The Decoration Programme in the Galleries of the Royal Palace Amsterdam: An Harmonious Interaction between Painting, Architecture and Light?” In *The Batavian Commissions*, edited by Marianna van der Zwaag, 35–53. Amsterdam: Royal Palace Amsterdam."
-  - id: "Van Loon 2008"
-    full: "Van Loon, Anneliese 2008. *Color Changes and Chemical Reactivity in Seventeenth-Century Oil Paintings*. Amsterdam: University of Amsterdam."
+  - id: "van Loon 2008"
+    full: "van Loon, Anneliese 2008. *Color Changes and Chemical Reactivity in Seventeenth-Century Oil Paintings*. Amsterdam: University of Amsterdam."
   - id: "van Loon, Noble, and Burnstock 2021"
     full: "van Loon, Annelies, Petria Noble, and Aviva Burnstock. 2021. “Ageing and Deterioration of Traditional Oil and Tempera Paints.” In *Conservation of Easel Paintings*, edited by Joyce Hill Stoner and Rebecca Rushfield, 329–56. London: Routledge."
   - id: "van Och and Hoppenbrouwers 2003"
