Edits to fig captions paper 33
Costaras

--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -1587,50 +1587,50 @@ figure_list:
     src: "figures/fig-33-1.jpg"
     zoom: true
     label: "Figure 33.1"
-    caption: "Master of the St. Ursula Legend (German, active ca. 1485–1515), *The Martyrdom of St. Ursula and the 11,000 Virgins*, ca. 1492. Oil on canvas, 163 × 232.4 cm (65 × 91 1/2 in.). London, Victoria & Albert Museum, 5938-1857."
-    credit: "Image: Victoria & Albert Museum"
+    caption: "Master of the St. Ursula Legend (German, active ca. 1485–1515), *The Martyrdom of St. Ursula and the 11,000 Virgins*, ca. 1492. Oil on canvas, 163 × 232.4 cm (65 × 91 1/2 in.). London, Victoria and Albert Museum, 5938-1857."
+    credit: "Image: © Victoria and Albert Museum"
 
   - id: "fig-33-2"
     src: "figures/fig-33-2.jpg"
     zoom: true
     label: "Figure 33.2"
-    caption: "Johann Gottfried Steffan (Swiss, 1815–1905), *The Torrent*, 1844/1848. Oil on canvas, 80.6 × 118 cm (31 3/4 × 46 1/2 in.). Reverse of the frame showing a nineteenth-century painted canvas backing. London, Victoria & Albert Museum, 1545‑1869."
-    credit: "Image: Victoria & Albert Museum"
+    caption: "Johann Gottfried Steffan (Swiss, 1815–1905), *The Torrent*, 1844/1848. Oil on canvas, 80.6 × 118 cm (31 3/4 × 46 1/2 in.). Reverse of the frame showing a nineteenth-century painted canvas backing. London, Victoria and Albert Museum, 1545‑1869."
+    credit: "Image: © Victoria and Albert Museum / Photo: Nicola Costaras"
 
   - id: "fig-33-3"
     src: "figures/fig-33-3.jpg"
     zoom: true
     label: "Figure 33.3"
-    caption: "A view of the British Picture Gallery, South Kensington Museum, London, April 15, 1862. London, Victoria & Albert Museum, 67:234."
-    credit: "Image: Victoria & Albert Museum"
+    caption: "A view of the British Picture Gallery, South Kensington Museum, London, April 15, 1862. London, Victoria and Albert Museum, 67:234."
+    credit: "Image: © Victoria and Albert Museum"
 
   - id: "fig-33-4"
     src: "figures/fig-33-4.jpg"
     zoom: true
     label: "Figure 33.4"
-    caption: "Estimate from Haines & Sons, May 25, 1896. London, Victoria & Albert Museum."
-    credit: "Image: Victoria & Albert Museum / Photo: Nicola Costaras"
+    caption: "Estimate from Haines & Sons, May 25, 1896. London, Victoria and Albert Museum."
+    credit: "Image: © Victoria and Albert Museum / Photo: Nicola Costaras"
 
   - id: "fig-33-5"
     src: "figures/fig-33-5.jpg"
     zoom: true
     label: "Figure 33.5"
-    caption: "The Paintings Galleries at the V&A, Room 82, displaying works from the Sheepshanks, Dyce, Forster, and Townshend gifts and bequests, 2003. London, Victoria & Albert Museum."
-    credit: "Image: Victoria & Albert Museum / Photo: Peter Kelleher"
+    caption: "The Paintings Galleries at the V&A, Room 82, displaying works from the Sheepshanks, Dyce, Forster, and Townshend gifts and bequests, 2003. London, Victoria and Albert Museum."
+    credit: "Image: © Victoria and Albert Museum / Photo: Peter Kelleher"
 
   - id: "fig-33-6"
     src: "figures/fig-33-6.jpg"
     zoom: true
     label: "Figure 33.6"
-    caption: "Ch’ol Muk Ri (North Korean), *Uri chungdae sosik*, 2005. Oil on cotton canvas, 81 × 77 cm (31 7/8 × 30 1/3 in.) on stretcher. The canvas painting is returned to plane through moisture treatments while on a loom. London, Victoria & Albert Museum, FE.89‑2009."
-    credit: "Image: Victoria & Albert Museum / Photo: Nicola Costaras"
+    caption: "Ch’ol Muk Ri (North Korean), *Uri chungdae sosik*, 2005. Oil on cotton canvas, 81 × 77 cm (31 7/8 × 30 1/3 in.) on stretcher. The canvas painting is returned to plane through moisture treatments while on a loom. London, Victoria and Albert Museum, FE.89‑2009."
+    credit: "Image: © Victoria and Albert Museum / Photo: Nicola Costaras"
 
   - id: "fig-33-7"
     src: "figures/fig-33-7.jpg"
     zoom: true
     label: "Figure 33.7"
-    caption: "Clare Richardson and Susan Catcher strip-lining *Landscape with Double Rainbow* by John Constable (English, 1779–1837) using Japanese paper and wheat starch paste. Paintings Conservation Studio, V&A, London. Oil on paper and canvas, 33.7 × 38.4 cm (13 1/4 × 15 1/8 in.). Victoria & Albert Museum, London, 328‑1888."
-    credit: "Image: Victoria & Albert Museum / Photo: Nicola Costaras"
+    caption: "Clare Richardson and Susan Catcher strip-lining *Landscape with Double Rainbow* by John Constable (English, 1779–1837) using Japanese paper and wheat starch paste. Paintings Conservation Studio, V&A, London. Oil on paper and canvas, 33.7 × 38.4 cm (13 1/4 × 15 1/8 in.). Victoria and Albert Museum, London, 328‑1888."
+    credit: "Image: © Victoria and Albert Museum"
 
   - id: "fig-34-1-a"
     src: "figures/fig-34-1-a.jpg"
