Edits to paper 42
edits to captions only

--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -2059,35 +2059,35 @@ figure_list:
     zoom: true
     label: "Figure 42.1"
     caption: "Westby Percival-Prescott, who organized the Greenwich conference, photographed at IIC 1982, Washington, DC."
-    credit: "Image: Joyce Hill Stoner"
+    credit: "Image: Joyce Hill Stoner, PhD, Director, Preservation Studies Doctoral Program, University of Delaware"
 
   - id: "fig-42-2"
     src: "figures/fig-42-2.jpg"
     zoom: true
     label: "Figure 42.2"
     caption: "Gerry Hedley demonstrating a vacuum envelope at Winterthur / University of Delaware, 1981."
-    credit: "Image: Joyce Hill Stoner"
+    credit: "Image: Joyce Hill Stoner, PhD, Director, Preservation Studies Doctoral Program, University of Delaware"
 
   - id: "fig-42-3"
     src: "figures/fig-42-3.jpg"
     zoom: true
     label: "Figure 42.3"
     caption: "Andrea Rothe (right) with Umberto Baldini and Ornella Casazza at the J. Paul Getty Museum, 1985."
-    credit: "Image: Joyce Hill Stoner"
+    credit: "Image: Joyce Hill Stoner, PhD, Director, Preservation Studies Doctoral Program, University of Delaware"
 
   - id: "fig-42-4"
     src: "figures/fig-42-4.jpg"
     zoom: true
     label: "Figure 42.4"
     caption: "Mira and Gustav Berger at ICOM-CC, Edinburgh, 1996."
-    credit: "Image: Joyce Hill Stoner"
+    credit: "Image: Joyce Hill Stoner, PhD, Director, Preservation Studies Doctoral Program, University of Delaware"
 
   - id: "fig-42-5"
     src: "figures/fig-42-5.jpg"
     zoom: true
     label: "Figure 42.5"
     caption: "Robert Fieux (left) demonstrating electrostatic hold, Winterthur, 1977."
-    credit: "Image: Joyce Hill Stoner"
+    credit: "Image: Joyce Hill Stoner, PhD, Director, Preservation Studies Doctoral Program, University of Delaware"
 
   - id: "fig-43-1"
     src: "figures/fig-43-1.jpg"
