--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -2163,7 +2163,7 @@ figure_list:
     src: "figures/fig-45-2.jpg"
     zoom: true
     label: "Figure 45.2"
-    caption: "Jordaens, *David and Goliath*, 1664, detail, approximately 250 × 120 cm (98 2/5 × 47 1/4 in.)."
+    caption: "Jacob Jordaens, *David and Goliath*, 1664, detail, approximately 250 × 120 cm (98 2/5 × 47 1/4 in.)."
     credit: "Image: Emilie Froment"
 
   - id: "fig-45-3"
@@ -2185,14 +2185,14 @@ figure_list:
     zoom: true
     label: "Figure 45.5"
     caption: "Cross section (microphotograph in bright field) of an oil-bound ground reconstruction composed of a 4:1 ratio of lead white to chalk. The sample is taken from an area where the canvas weave was visible after wax-resin impregnation. The ground exhibits a layer thickness of 59–276 μm, depending on the texture of the canvas."
-    credit: "Image: Emilie Froment"
+    credit: "Image: J. Schlomoff"
 
   - id: "fig-45-6"
     src: "figures/fig-45-6.jpg"
     zoom: true
     label: "Figure 45.6"
     caption: "Oil-bound ground reconstruction composed of clay and quartz in a ratio of 4.2:0.8. The left part is not impregnated with wax resin, while the right part is. Note the striking color difference. The upper and lower edges are bare canvas."
-    credit: "Image: J. Schlomoff"
+    credit: "Image: Emilie Froment"
 
   - id: "fig-45-7"
     src: "figures/fig-45-7.jpg"
