Edits to poster 60

--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -2859,35 +2859,35 @@ figure_list:
     zoom: true
     label: "Figure 60.1"
     caption: "Antoine Dubost (French, 1769–1825), *The Sword of Damocles*, 1804. Oil on canvas, 228 × 258 cm (89 3/4 × 101 3/5 in.). Chhatrapati Shivaji Maharaj Vastu Sangrahalaya collection, Acc. No. 22.4544. After treatment."
-    credit: "Image: Chhatrapati Shivaji Maharaj Vastu Sangrahalaya (CSMVS)"
+    credit: "Image: © Chhatrapati Shivaji Maharaj Vastu Sangrahalaya (CSMVS)"
 
   - id: "fig-60-2"
     src: "figures/fig-60-2.jpg"
     zoom: true
     label: "Figure 60.2"
     caption: "Left: Backscatter SEM image of fungal infestation of size layer at 1123× magnification and 20 keV. Right: Mounted cross section showing fungal infestation leading to delamination between canvas and ground layer."
-    credit: "Images: CSMVS"
+    credit: "Images: © Chhatrapati Shivaji Maharaj Vastu Sangrahalaya (CSMVS)"
 
   - id: "fig-60-3"
     src: "figures/fig-60-3.jpg"
     zoom: true
     label: "Figure 60.3"
     caption: "Top left: Consolidation of paint layer with Plextol B500 through a window of the 2004 glue facing. The facing here is the old facing given in 2006. Top right: Reconstruction of paint flakes on net. Bottom left: Facing with lens tissue and Beva 371. Bottom right: Removal of old lining cloth."
-    credit: "Image: CSMVS"
+    credit: "Images: © Chhatrapati Shivaji Maharaj Vastu Sangrahalaya (CSMVS)"
 
   - id: "fig-60-4"
     src: "figures/fig-60-4.jpg"
     zoom: true
     label: "Figure 60.4"
     caption: "Top left: Local tear repair on verso using polyamide welding powder. Top right: Decrimping of new lining cloth. Bottom left: Lining. Bottom right: Removal of wax and dammar mixture, applied to further consolidation, from recto."
-    credit: "Image: CSMVS"
+    credit: "Images: © Chhatrapati Shivaji Maharaj Vastu Sangrahalaya (CSMVS)"
 
   - id: "fig-60-5"
     src: "figures/fig-60-5.jpg"
     zoom: true
     label: "Figure 60.5"
     caption: "Sir Thomas Lawrence (British, 1769–1830), *Portrait of Henry Philip Hope*, ca. early 19th century. Oil on canvas, 261 × 155 cm (102 3/4 × 61 in.). CSMVS collection, Acc. No. 22.4614. Left: Before treatment. Right: After treatment."
-    credit: "Image: CSMVS"
+    credit: "Images: © Chhatrapati Shivaji Maharaj Vastu Sangrahalaya (CSMVS)"
 
   - id: "fig-61-1"
     src: "figures/fig-61-1.jpg"
